# tanmatsu-nofrendo

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  README.txt
main/: CMakeLists.txt  display.c  display.h  help.c  help.h  icons.c  icons.h  idf_component.yml  lcd.c  led.c  led.h  main.c  menu_filebrowser.c  menu_filebrowser.h  message_dialog.c  sdcard.c  sdcard.h
main/common/: display.c  display.h  theme.c
main/menu/: CMakeLists.txt  component.mk
main/menu/src/: charData.c  charPixels.c  charPixels.h  decode_image.c  decode_image.h  iconData.c  menu.c  menu.h  pretty_effect.c  pretty_effect.h
main/nofrendo/: CMakeLists.txt
main/nofrendo/src/: bitmap.c  bitmap.h  config.c  event.c  event.h  gui.c  gui.h  gui_elem.c  gui_elem.h  intro.c  intro.h  log.c  log.h  memguard.c  memguard.h  nofconfig.h  nofrendo.c  nofrendo.h  noftypes.h  osd.h  pcx.c  pcx.h  version.h  vid_drv.c  vid_drv.h
main/nofrendo/src/cpu/: dis6502.c  dis6502.h  nes6502.c  nes6502.h
main/nofrendo/src/esp32/: emumenu.c  emumenu.h  kbdcontroller.c  kbdcontroller.h  mipi_gfx.c  mipi_gfx.h  osd.c  psxcontroller.c  psxcontroller.h  spi_lcd.c  video_audio.c
main/nofrendo/src/libsnss/: libsnss.c  libsnss.h
main/nofrendo/src/mappers/: map000.c  map001.c  map002.c  map003.c  map004.c  map005.c  map007.c  map008.c  map009.c  map011.c  map015.c  map016.c  map018.c  map019.c  map024.c  map032.c  map033.c  map034.c  map040.c  map041.c  map042.c  map046.c  map050.c  map064.c  map065.c  map066.c  map070.c  map073.c  map075.c  map078.c  map079.c  map085.c  map087.c  map093.c  map094.c  map099.c  map160.c  map229.c  map231.c  mapvrc.c
main/nofrendo/src/nes/: mmclist.c  mmclist.h  nes.c  nes.h  nes_mmc.c  nes_mmc.h  nes_pal.c  nes_pal.h  nes_ppu.c  nes_ppu.h  nes_rom.c  nes_rom.h  nesinput.c  nesinput.h  nesstate.c  nesstate.h
main/nofrendo/src/sndhrdw/: fds_snd.c  fds_snd.h  mmc5_snd.c  mmc5_snd.h  nes_apu.c  nes_apu.h  vrcvisnd.c  vrcvisnd.h
sdkconfigs/: general
